
Extension Modules
-----------------

Library
-------

- The user module has been deprecated for removal in Python 3.0.

- The stringold module has been deprecated for removal in Python 3.0.

- The mutex module has been deprecated for removal in Python 3.0.

- The imputil module has been deprecated for removal in Python 3.0.

- test.test_support.catch_warning() gained a 'record' argument.

Build
-----

What's New in Python 2.6 alpha 3?
=================================

*Release date: 08-May-2008*

Core and builtins
-----------------

- Issue #2719: backported the ``next()`` builtin from Python 3.

- Issue #2681: The octal literal ``0o8`` was incorrecly acctepted. Now it
  properly raises a SyntaxError.

- Patch #2617: Reserved -J and -X arguments for Jython, IronPython and other
  implementations of Python. 

- Implemented PEP 370: Per user site-packages directory

Extension Modules
-----------------

- Issue #2670:  Fix a failure in urllib2.build_opener(), when passed two
  handlers that derive the same default base class.

- Added kill, terminate and send_signal(sig) to subprocess.Popen.

- Added phase(z) -> phi, polar(z) -> r, phi and rect(r, phi) -> z to the cmath
  module.

- Four new methods were added to the math and cmath modules:
  acosh, asinh, atanh and log1p. 

- zlib.decompressobj().flush(value) no longer crashes the interpreter when
  passed a value less than or equal to zero.

- Issue #1631171: Re-implement the 'warnings' module in C (the original Python
  code has been kept as backup). This will allow for using the 'warning's
  machinery in such places as the parser where use of pure Python code is not
  possible.  Both the ``showarning()`` and ``formatwarning()`` gain an
  optional 'line' argument which is not called by default for
  backwards-compatibility reasons. Setting ``warnings.showwarning()`` to
  an implementation that lacks support for the ``line`` argument will raise a
  DeprecationWarning.

Library
-------
